--- a/src/scss/partials/_header.scss
+++ b/src/scss/partials/_header.scss
@@ -1,7 +1,7 @@
 header {
     width: 100%;
     height: 70px;
-    background: rgb(46, 58, 70);
+    background: $secondary_color;
 
     .container {
         width: 1070px;
