--- a/src/scss/partials/_header.scss
+++ b/src/scss/partials/_header.scss
@@ -3,7 +3,7 @@ header {
     height: 70px;
     background: $secondary_color;
 
-    .container {
+    .container-header {
         width: 1070px;
         height: 100%;
         margin: 0 auto;
