--- a/src/scss/partials/_main.scss
+++ b/src/scss/partials/_main.scss
@@ -11,20 +11,20 @@
         justify-content: flex-start;
         align-items: center;
         flex-direction: column;
-        flex-basis: 200px;
         padding: 20px;
         margin: 10px 20px;
         height: 360px;
-        background: rgb(46, 58, 70);
+        width: 360px;
+        background: $cd_color;
         text-align: center;
 
         .cd img {
-            max-width: 100%;
+            max-width: 50%;
         }
 
         .cd h3 {
-            margin: 20px 0;
-            color: white;
+            margin: 20px;
+            color: black;
             font-size: 22px;
             text-transform: uppercase;
         }
